@@ -11,9 +11,11 @@ author_id INT NOT NULL default 0,
 author varchar(50) NOT NULL,
 create_date INT NOT NULL default 0,
 publish_date INT NOT NULL default 0,
+expire_date int not null default 0,
 allow_comments SMALLINT NOT NULL default 0,
 approved INT NOT NULL default 0,
 allow_anon SMALLINT NOT NULL default 0,
+sticky smallint not null default 0,
 image_id INT NOT NULL default 0,
 PRIMARY KEY ( id )
 );
