@@ -2,6 +2,7 @@ Version 1.4.3
 ------------------------------------------------------------------
 6 March 2007
 + Added ability for blog entries to expire.
++ Added ability to sticky a blog entry.
 
 5 March 2007
 + Changed control panel icon
